package message;

// Response defines a response from a service.
message Response {
  enum Kind {
    OK = 1;
    Unavailable = 2;
    Timeout = 3;
    Internal = 4;
  }

  optional uint32 request_id = 1;
  optional Kind kind = 2;
  optional string message = 3;
  optional bytes data = 4;
}
